Added new tab showing all upcoming deployments

--- a/templates/deployment_view.html.twig
+++ b/templates/deployment_view.html.twig
@@ -47,7 +47,7 @@
         <div class="active item" data-tab="items">
             <h2 class="ui header">
                 <span>
-                    <i class="ui flag icon hide-on-mobile"></i> <span class="hide-on-mobile">Deployment</span> Items 
+                    <i class="ui flag icon"></i> <span class="hide-on-mobile">Deployment Items</span> 
                     <span class="ui circular large label">{{items|length}}</span>
                 </span>
             </h2>
@@ -55,7 +55,7 @@
         <div class="item" data-tab="checklist">
             <h2 class="ui header">
                 <span>
-                    <i class="ui tasks icon hide-on-mobile"></i> Checklist
+                    <i class="ui tasks icon"></i> <span class="hide-on-mobile">Checklist</span>
                     <span class="ui circular large label">{{checklists|length}}</span>
                 </span>
             </h2>
