--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -70,6 +70,9 @@
                                                 <div class="ui header">
                                                     <span>
                                                         {{_self.crumb_project(deployment.project, true)}}
+                                                        {% if deployment.project.userProject(ds.currentUserEntity()).fav %}
+                                                            <i class="ui yellow star icon"></i>
+                                                        {% endif %}
                                                     </span>
                                                     &raquo;
                                                     <span>
