--- a/templates/checklist_form.html.twig
+++ b/templates/checklist_form.html.twig
@@ -18,7 +18,7 @@
     {% endif %}
 
     {% set templates = checklist.deployment.getChecklistTemplates() %}
-    <form method="POST">
+    <form method="POST" onsubmit="javascript:form_disabler(this)">
         <div class="ui form">
             <div class="ui required field basic segment">
                 <label class="ui top attached large label">Title</label>
