--- a/templates/project_users.html.twig
+++ b/templates/project_users.html.twig
@@ -9,7 +9,7 @@
         <div class="ui divider" style="clear: both"></div>
     </h1>
 
-    <form method="POST">
+    <form method="POST" onsubmit="javascript:form_disabler(this)">
         <div class="ui form">
             <table class="ui celled structured sortable table">
                 <thead>
