--- a/templates/deployment_request_form.html.twig
+++ b/templates/deployment_request_form.html.twig
@@ -15,7 +15,7 @@
         </div>
     {% endif %}
 
-    <form method="POST">
+    <form method="POST" onsubmit="javascript:form_disabler(this)">
         <div class="ui form">
             <div class="ui required field basic segment">
                 <label class="ui top attached large label">Deployment Date</label>
