--- a/templates/security/register_form.html.twig
+++ b/templates/security/register_form.html.twig
@@ -18,7 +18,7 @@
         </div>
     {% endif %}
 
-    <form method="POST">
+    <form method="POST" onsubmit="javascript:form_disabler(this)">
         <div class="ui form">
             {%  if not user.auth %}
                 <div class="ui required field basic segment">
