--- a/templates/security/resetpwd_form.html.twig
+++ b/templates/security/resetpwd_form.html.twig
@@ -18,7 +18,7 @@
         </div>
     {% endif %}
 
-    <form method="POST">
+    <form method="POST" onsubmit="javascript:form_disabler(this)">
         <div class="ui form">
             <div class="ui required field basic segment">
                 <label class="ui top attached large label">Email</label>
